# yakc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LINKS.md  README.md  fips.yml
files/: 1942.tap  2088.tap  abadiade.tap  assmon.tap  atom_alnum_test.txt  atom_graphics_test.txt  atom_hello.txt  atom_kbdjoytest.txt  atom_memcheck.txt  atom_mmcjoytest.txt  backtore.tap  beverlyh.tap  biff.tap  bombjac1.tap  bombjack.tap  bould-3.kcc  boulder1.tap  c64_test1.txt  c64_test2.txt  c64_test3.txt  c64_test4.txt  caos41e.854  cjetsetminer.tap  combatzo.tap  cosmic_ball.z80  curseofs.tap  demo1.kcc  demo2.kcc  demo3.kcc  digger.z80  dormann6502.tap  ghostsng.tap  hardhatharry.tap  hauntedh.tap  ikplus_c64.tap  kcpascal.tap  kingdomo.tap  prettyc_com.tap  serious.kcc  texor.rom  (+3 more)
fips-configs/: yakc-emsc-make-release.yml  yakc-linux-make-unittest.yml  yakc-osx-make-unittest.yml  yakc-wasm-make-release.yml
fips-files/configs/: osx-vscode-release.yml  yakc-wasm-make-release.yml
fips-files/verbs/: web.py
fips-generators/: dump.py  nestestlog.py
fips-verbs/: web.py
misc/: LINKS.md  c64_games.txt  c64_wlorenz.md  c64_wlorenz.txt  jungle4_debug.txt  kc85_3_kbdint.md
scribble/: boulderdash_debug.txt  digger.txt  kc85_3_kbdint.md  kc85_3_kbdint.txt
src/core/: CMakeLists.txt  breadboard.h  clock.h  common.h  cpu.h  kc85.h  kc85_audio.h  kc85_exp.h  kc85_expansion.h  kc85_module.h  kc85_roms.h  kc85_snapshot.h  kc85_video.h  mem.h  memory.h  opcodes.h  opcodes.py  z80.h  z80_decoder.h  z80_opcodes.h  z80_opcodes.py  z80_switch.h  z80ctc.h  z80dbg.h  z80int.h  z80pio.h  z80x.h
src/emu/: CMakeLists.txt  emu.h
src/kc85/: CMakeLists.txt  kc85.h  kc85_snapshot.h  kc85_video.h
src/kcc/: digger-3.kcc  house4.tap  jungle4.tap  pengo4.kcc  testbild.kcc
src/roms/: CMakeLists.txt  caos41c.854  roms.cc  roms.h  roms.yml
src/test/: CMakeLists.txt  cpu_test.cc  daisychain_test.cc  dump.cc  dump.h  dump.yml  filesystem_test.cc  mem_test.cc  memory_test.cc  mos6502_test.cc  mos6522_test.cc  nestest_test.cc  nestestlog.h  z80_test.cc  z80pio_test.cc  z80x_test.cc  zex.cc  zex.h  zex_test.cc  zexdoc.src  zexdoc_test.cc
src/ui/: AudioWindow.cc  AudioWindow.h  CMakeLists.txt  CTCWindow.cc  CTCWindow.h  CommandWindow.cc  CommandWindow.h  DebugWindow.cc  DebugWindow.h  Disasm.cc  Disasm.h  DisasmWindow.cc  DisasmWindow.h  FileLoader.cc  FileLoader.h  HexInputWidget.h  ImGuiMemoryEditor.h  KeyboardWindow.cc  KeyboardWindow.h  LoadWindow.cc  LoadWindow.h  MemoryMapWindow.cc  MemoryMapWindow.h  MemoryWindow.cc  MemoryWindow.h  ModuleWindow.cc  ModuleWindow.h  PIOWindow.cc  PIOWindow.h  SnapshotStorage.cc  SnapshotStorage.h  UI.cc  UI.h  Util.h  WindowBase.cc  WindowBase.h
src/yakc/: Audio.cc  Audio.h  CMakeLists.txt  Draw.cc  Draw.h  KC85Oryol.h  Main.cc  breadboard.h  clock.cc  clock.h  core.h  cpc.cc  cpc.h  cpc_video.cc  cpc_video.h  crt.h  emu.h  i8255.cc  i8255.h  kc85.cc  kc85.h  kc85_audio.cc  kc85_audio.h  kc85_audiosource.cc  kc85_audiosource.h  kc85_exp.h  kc85_roms.cc  kc85_roms.h  kc85_snapshot.cc  kc85_snapshot.h  kc85_video.cc  kc85_video.h  keybuffer.cc  keybuffer.h  mc6845.cc  mc6845.h  memory.cc  memory.h  rom_images.cc  rom_images.h  (+43 more)
src/yakc_oryol/: Audio.cc  Audio.h  AudioSource.cc  AudioSource.h  CMakeLists.txt  Disasm.h  Draw.cc  Draw.h  FileLoader.cc  FileLoader.h  Keyboard.cc  Keyboard.h  SnapshotStorage.cc  SnapshotStorage.h  kc85_audiosource.cc  kc85_audiosource.h  yakc_shader.glsl  yakc_shaders.shd  z80dasm.cc  z80dasm.h
test/: CMakeLists.txt  cpu_test.cc  memory_test.cc  z80_test.cc
web/: _config.yml  about.html  emsc.js  index.html  index_asmjs.html  index_wasm.html  p010_kc85.md  p020_emulator.md  p025_debuggerui.md  p030_examples.md  p030_explorecaos.md  p035_helloworld.md  p040_hardwaredocs.md  p040_systemcalls.md  p050_caosdocs.md  p050_hwref.md  p060_links.md  style.css
yakc/: CMakeLists.txt  common.h  cpu.h  memory.h  opcodes.h  opcodes.py  z80.h
yakc_app/: Audio.cc  Audio.h  CMakeLists.txt  Draw.cc  Draw.h  KC85Oryol.h  Main.cc  Util.h  draw.cc  draw.h  imgui_memoryeditor.h  main.cc  shaders.shd  ui.cc  ui.h  ui_cpu_window.cc  ui_cpu_window.h  ui_hexinput.h  ui_mem_window.cc  ui_mem_window.h  ui_window.cc  ui_window.h  util.h
yakc_core/: CMakeLists.txt  _dummy.cc  caos33.853  caos34.853  clock.h  common.h  kc85.cc  kc85.h  kc85_audio.h  kc85_expansion.h  kc85_module.h  kc85_video.h  memory.h  opcodes.h  opcodes.py  roms.cc  roms.h  roms.py  z80.h  z80ctc.h  z80dbg.h  z80int.h  z80pio.h
yakc_roms/: CMakeLists.txt  hc900.852  m006.rom  roms.cc  roms.h  roms.yml
yakc_test/: CMakeLists.txt  README.md  daisychain_test.cc  memory_test.cc  z80_test.cc  zex.cc  zex.h  zexall.src  zexdoc_test.cc
yakc_ui/: CMakeLists.txt  CTCWindow.cc  CTCWindow.h  CpuWindow.cc  CpuWindow.h  DebugWindow.cc  DebugWindow.h  Disasm.cc  Disasm.h  DisasmWindow.cc  DisasmWindow.h  FileLoader.cc  FileLoader.h  HexInputWidget.h  ImGuiMemoryEditor.h  KeyboardWindow.cc  KeyboardWindow.h  LoadWindow.cc  LoadWindow.h  MemoryMapWindow.cc  MemoryMapWindow.h  MemoryWindow.cc  MemoryWindow.h  ModuleWindow.cc  ModuleWindow.h  PIOWindow.cc  PIOWindow.h  UI.cc  UI.h  WindowBase.h  z80dasm.cc
(+269 files in other folders)
